--- a/django-calendar/cal/templates/cal/calendar.html
+++ b/django-calendar/cal/templates/cal/calendar.html
@@ -6,7 +6,7 @@
     <a class="btn btn-info left" href="{% url 'cal:calendar' %}?{{ prev_month }}"> << Предидущий месяц </a>
     <a class="btn btn-info left" href="{% url 'cal:calendar' %}?{{ next_month }}"> Следующий месяц >> </a>
     <h2 class="cal">КАЛЕНДАРЬ</h2>
-    <a class="btn btn-info right" href="{% url 'cal:event_new' %}"> + Добавить </a>
+    <a class="btn btn-info right" href="{% url 'cal:event_new' %}"> + Добавить мероприятие </a>
 </div>
 
 {{ calendar }}
