--- a/django-calendar/cal/templates/cal/event.html
+++ b/django-calendar/cal/templates/cal/event.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="clearfix">
-    <a class="btn btn-info left" href="{% url 'cal:calendar' %}"> Календарь занятий </a>
+    <a class="btn btn-info left" href="{% url 'cal:calendar' %}"> Календарь </a>
 </div>
 
 {% if form.errors %}
@@ -28,11 +28,12 @@
         <tr>
             <td colspan="2">
                 <button type="submit" class="btn btn-info right"> Добавить</button>
+                {% if event_del.id %}
+                <a class="btn btn-info right" href="{% url 'cal:event_delete' event_del.id %}">Удaлить</a>
+                {% endif %}
             </td>
         </tr>
     </table>
 </form>
-
-
-
 {% endblock %}
+
