--- a/django-calendar/cal/templates/cal/event_delete.html
+++ b/django-calendar/cal/templates/cal/event_delete.html
@@ -1,13 +1,15 @@
 {% extends 'cal/base.html' %}
 
 {% block content %}
-<div class="clearfix">
-    <a class="btn btn-info left" href="{% url 'cal:calendar' %}"> Календарь </a>
-    <form action="" method="post">{% csrf_token %}
-    <p>Удалить?
-        <button type="submit" class="btn btn-danger left"> ДА </button>
-    </p>
-</form>
-</div>
 
+<div class="clearfix">
+        <a class="btn btn-info left" href="{% url 'cal:calendar' %}"> Календарь </a>
+    <form action="" method="post">{% csrf_token %}
+        <p class="cal">Удалить мероприятие?</p>
+        <h4 class="del_yes">
+            <button type="submit" class="btn btn-danger left">Да</button>
+            <a class="btn btn-info right" href="{% url 'cal:event_edit' event.id %}">Нет</a>
+        </h4>
+    </form>
+</div>
 {% endblock content %}
