--- a/django-calendar/cal/templates/cal/add_user.html
+++ b/django-calendar/cal/templates/cal/add_user.html
@@ -3,7 +3,8 @@
 {% block content %}
     <div class="clearfix">
         <a class="btn btn-info left" href="{% url 'cal:calendar' %}"> Календарь </a>
-        <a class="btn btn-info right" href="{% url 'cal:add_user' %}"> Добавить пользователя </a>
+        <a class="btn btn-info right" href="{% url 'cal:event_new' %}"> + Добавить мероприятие </a>
+        <a class="btn btn-info right" href="{% url 'cal:list_user' %}"> Список пользователей </a>
     </div>
 
     {% if form.errors %}
@@ -25,13 +26,10 @@
     <form method="post">
         {% csrf_token %}
         <table class="form form-table">
-            {{ form }}
+            {{ user_form }}
             <tr>
                 <td colspan="2">
                     <button type="submit" class="btn btn-info right">Добавить</button>
-                    {% if event_del.id %}
-                        <a class="btn btn-info right" href="{% url 'cal:event_delete' event_del.id %}">Удaлить</a>
-                    {% endif %}
                 </td>
             </tr>
         </table>
