--- a/django-calendar/cal/templates/cal/calendar.html
+++ b/django-calendar/cal/templates/cal/calendar.html
@@ -2,12 +2,14 @@
 
 {% block content %}
 
-<div class="clearfix">
-    <a class="btn btn-info left" href="{% url 'cal:calendar' %}?{{ prev_month }}"><< Предидущий месяц</a>
-    <a class="btn btn-info left" href="{% url 'cal:calendar' %}?{{ next_month }}">Следующий месяц >></a>
-    <h2 class="cal">КАЛЕНДАРЬ</h2>
-    <a class="btn btn-info right" href="{% url 'cal:event_new' %}">+ Добавить мероприятие</a>
-</div>
+    <div class="clearfix">
+        <a class="btn btn-info" href="{% url 'cal:calendar' %}?{{ prev_month }}"> << Предидущий месяц </a>
+        <a class="btn btn-info" href="{% url 'cal:calendar' %}?{{ next_month }}"> Следующий месяц >> </a>
 
-{{ calendar }}
+        <h2 class="cal">КАЛЕНДАРЬ</h2>
+        <a class="btn btn-info right" href="{% url 'cal:event_new' %}"> + Добавить мероприятие </a>
+        <a class="btn btn-info right" href="{% url 'cal:list_user' %}"> Список пользователей </a>
+    </div>
+
+    {{ calendar }}
 {% endblock %}
