--- a/django-calendar/cal/templates/cal/add_user.html
+++ b/django-calendar/cal/templates/cal/add_user.html
@@ -4,7 +4,7 @@
     <div class="clearfix">
         <a class="btn btn-info left" href="{% url 'cal:calendar' %}"> Календарь </a>
         <a class="btn btn-info right" href="{% url 'cal:event_new' %}"> + Добавить мероприятие </a>
-        <a class="btn btn-info right" href="{% url 'cal:list_user' %}"> Список пользователей </a>
+        <a class="btn btn-info right" href="{% url 'cal:user_list' %}"> Список пользователей </a>
     </div>
 
     {% if form.errors %}
@@ -35,4 +35,3 @@
         </table>
     </form>
 {% endblock %}
-
