--- a/django-calendar/cal/templates/cal/calendar.html
+++ b/django-calendar/cal/templates/cal/calendar.html
@@ -8,7 +8,7 @@
 
         <h2 class="cal">КАЛЕНДАРЬ</h2>
         <a class="btn btn-info right" href="{% url 'cal:event_new' %}"> + Добавить мероприятие </a>
-        <a class="btn btn-info right" href="{% url 'cal:list_user' %}"> Список пользователей </a>
+        <a class="btn btn-info right" href="{% url 'cal:user_list' %}"> Список пользователей </a>
     </div>
 
     {{ calendar }}
