--- a/django-calendar/cal/static/cal/css/styles.css
+++ b/django-calendar/cal/static/cal/css/styles.css
@@ -14,6 +14,21 @@
   margin-right: 3px;
 }
 
+.btn_user {
+  width: 320px;
+  height: 50px;
+  margin: 5px;
+  color: black;
+  background-color: transparent;
+  box-shadow: 0 0 0 0;
+  border-radius: 5px;
+  border: 1px solid #17a2b8;
+  padding: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .cal {
   position: absolute;
   left: 50%;
