--- a/django-calendar/cal/templates/cal/base.html
+++ b/django-calendar/cal/templates/cal/base.html
@@ -3,22 +3,24 @@
 <html lang="en">
 
 <head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-    crossorigin="anonymous">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+          crossorigin="anonymous">
 
-  <link rel="stylesheet" type="text/css" href="{% static 'cal/css/styles.css' %}">
-  <title>Календарь</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'cal/css/styles.css' %}">
+    <title>Календарь</title>
 </head>
 <body>
-  {% block content %}
-  {% endblock %}
+        {% block content %}
+        {% endblock %}
 
 
-  {% block script %}
-  {% endblock %}
+        {% block script %}
+        {% endblock %}
+
 </body>
 </html>
