--- a/django-calendar/cal/templates/cal/event.html
+++ b/django-calendar/cal/templates/cal/event.html
@@ -3,7 +3,8 @@
 {% block content %}
     <div class="clearfix">
         <a class="btn btn-info left" href="{% url 'cal:calendar' %}"> Календарь </a>
-        <a class="btn btn-info right" href="{% url 'cal:add_user' %}"> Добавить пользователя </a>
+        <a class="btn btn-info right" href="{% url 'cal:add_user' %}"> + Добавить пользователя </a>
+        <a class="btn btn-info right" href="{% url 'cal:user_list' %}"> Список пользователей </a>
     </div>
 
     {% if form.errors %}
