--- a/django-calendar/cal/templates/cal/user_detail.html
+++ b/django-calendar/cal/templates/cal/user_detail.html
@@ -1,10 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'cal/base.html' %}
 
-</body>
-</html>
+{% block content %}
+    <div class="clearfix">
+        <a class="btn btn-info left" href="{% url 'cal:calendar' %}"> Календарь </a>
+        <a class="btn btn-info right" href="{% url 'cal:event_new' %}"> + Добавить мероприятие </a>
+        <a class="btn btn-info right" href="{% url 'cal:user_list' %}"> Список пользователей </a>
+    </div>
+    <h6 class="clearfix left">
+        {{ user }}
+    </h6>
+{% endblock %}
+
+
