--- a/django-calendar/cal/static/cal/css/styles.css
+++ b/django-calendar/cal/static/cal/css/styles.css
@@ -29,6 +29,15 @@
   justify-content: center;
 }
 
+.btn_res {
+  width: 540px;
+  height: 180px;
+  margin: 5px;
+  border-radius: 5px;
+  border: 1px solid #17a2b8;
+  padding: 5px;
+}
+
 .cal {
   position: absolute;
   left: 50%;
