--- a/django-calendar/cal/templates/cal/calendar.html
+++ b/django-calendar/cal/templates/cal/calendar.html
@@ -7,6 +7,7 @@
         <a class="btn btn-info" href="{% url 'cal:calendar' %}?{{ next_month }}"> Следующий месяц >> </a>
         <h2 class="cal">КАЛЕНДАРЬ</h2>
         <a class="btn btn-info right" href="{% url 'cal:event_new' %}"> + Добавить мероприятие </a>
+        <a class="btn btn-info right" href="{% url 'cal:add_user' %}"> + Добавить пользователя </a>
         <a class="btn btn-info right" href="{% url 'cal:user_list' %}"> Список пользователей </a>
     </div>
 
