--- a/django-calendar/cal/templates/cal/add_user.html
+++ b/django-calendar/cal/templates/cal/add_user.html
@@ -29,6 +29,7 @@
             {{ user_form }}
             <tr>
                 <td colspan="2">
+                    <p>Укажите полное ФИО без сокращений</p>
                     <button type="submit" class="btn btn-info right">Добавить</button>
                 </td>
             </tr>
