переписал все на функции

--- a/django-calendar/cal/static/cal/css/styles.css
+++ b/django-calendar/cal/static/cal/css/styles.css
@@ -6,6 +6,11 @@
   float: right;
 }
 
+.m_button {
+  display: flex;
+  justify-content: center;
+}
+
 .btn {
   outline: none;
   color: black;
@@ -43,7 +48,7 @@
   margin: 1px;
   border-radius: 5px;
   border: 1px solid #17a2b8;
-  padding: 5px;
+  padding: 1px;
   color: black;
   background-color: transparent;
   box-shadow: 0 0 0 0;
