--- a/django-calendar/cal/templates/cal/user_delete.html
+++ b/django-calendar/cal/templates/cal/user_delete.html
@@ -10,10 +10,10 @@
     <div>
         <form action="{% url 'cal:user_detail' user.id %}" method="post">
             {% csrf_token %}
-            <p class="cal">Удалить пользователя <br>
+            <p class="title">Удалить пользователя <br>
                 {{ user }}?
             </p>
-            <h4 class="del_yes">
+            <h4 class="m_button">
                 <button type="submit" class="btn btn-danger left">Да</button>
                 <a class="btn btn-info right" href="{% url 'cal:user_detail' user.id %}">Нет</a>
             </h4>
