Сделал отображение + как кнопки на календаре

--- a/django-calendar/cal/templates/cal/user_list.html
+++ b/django-calendar/cal/templates/cal/user_list.html
@@ -8,17 +8,17 @@
     </div>
     <h5 class="clearfix"> Всего пользователей: {{ users_with_event_count|length }} <br> Всего мероприятий: {{ total_event_count }}</h5>
 
-    {% for letter in "АБВГДЕЖЗИКЛМНОПРСТУФХЦЧШЩЭЮЯ" %}
-        <h6 class="clearfix">
-            <strong>{{ letter }}</strong>
-            {% for user in users_with_event_count|dictsort:"name" %}
-                {% if user.name.0|upper == letter %}
-                    <a class="btn-info btn_user" href="{% url 'cal:user_detail' user.id %}">
-                        {{ user.name }} <br>
-                        - всего мероприятий: {{ user.event_count }} шт. <br>
-                    </a>
-                {% endif %}
-            {% endfor %}
-        </h6>
-    {% endfor %}
+{% for letter in "АБВГДЕЖЗИКЛМНОПРСТУФХЦЧШЩЭЮЯ" %}
+    <h6 class="clearfix">
+        <strong>{{ letter }}</strong>
+        {% for user in users_with_event_count|dictsort:"name" %}
+            {% if user.name.0|upper == letter %}
+                <a class="btn-info btn_user" href="{% url 'cal:user_detail' user.id %}" style="background-color: {{ user.color }};">
+                    {{ user.name }} <br>
+                    - всего мероприятий: {{ user.event_count }} шт. <br>
+                </a>
+            {% endif %}
+        {% endfor %}
+    </h6>
+{% endfor %}
 {% endblock %}
