--- a/django-calendar/cal/static/cal/css/styles.css
+++ b/django-calendar/cal/static/cal/css/styles.css
@@ -116,7 +116,7 @@
 
 .month {
   font-size: 30px;
-  background: LightSteelBlue;
+  background: #17a2b8;
 }
 
 .date {
@@ -135,4 +135,24 @@ a {
 .sm {
   font-size: 12px;
   color: rgb(255, 0, 106);
+}
+
+.add-event-link {
+    display: inline-block;
+    text-decoration: none;
+}
+
+.circle-button {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background-color: #17a2b8;
+    color: white;
+    text-align: center;
+    line-height: 30px;
+    font-size: 18px;
+}
+
+a:hover {
+  text-decoration: none;
 }
