--- a/django-calendar/cal/templates/cal/add_user.html
+++ b/django-calendar/cal/templates/cal/add_user.html
@@ -29,7 +29,9 @@
             {{ user_form }}
             <tr>
                 <td colspan="2">
-                    <p>Укажите полное ФИО без сокращений</p>
+                    <p>Укажите полностью ФИО без сокращений, <br>
+                        цвет присваиваться автоматически
+                    </p>
                     <button type="submit" class="btn btn-info right">Добавить</button>
                 </td>
             </tr>
